[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "=0.8.7"
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
colored = "=2.0.0"
float-ord = "0.3.2"
serde = { version = "1.0.152" }
ron = "=0.8.0"
linked-hash-map = "=0.5.6"
rand = "0.8.5"
num-rational = "0.4.1"

[profile.release]
lto = "thin"
